--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @import "layout/header";
 @import "layout/flex";
 @import "layout/footer";
+@import "layout/navigation";
+@import "layout/popup";
 
 @import "base/typography";
 @import "base/animations";
