--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -495,6 +495,10 @@ body {
   }
 }
 
+::selection {
+  background-color: rgba(85, 197, 122, 0.4);
+}
+
 .header {
   height: 95vh;
   position: relative;
